--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,18 +1,35 @@
+<!--
+  ~ Copyright (c) 2025. Fairphone B.V.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <path
-      android:pathData="M42.2,35.9h23.5c4.1,0 7.5,3.3 7.5,7.5V67c0,4.1 -3.4,7.5 -7.5,7.5H42.2c-4.1,0 -7.5,-3.3 -7.5,-7.5V43.4C34.7,39.3 38.1,35.9 42.2,35.9z"
-      android:fillColor="#68A4F2"/>
-  <path
-      android:pathData="M66,74.5l-16.6,0c-3.6,0 -5.4,-4.4 -2.8,-6.9c4.6,-4.4 8.3,-8 13.3,-12.8c1.6,-1.5 4.1,-1.5 5.6,0c2.9,2.8 5.4,5.2 7.8,7.5l0,4.9C73.3,71.2 70,74.5 66,74.5z"
-      android:fillColor="#172339"/>
-  <path
-      android:pathData="M40.2,44.9c0,-2 1.6,-3.6 3.6,-3.6s3.6,1.6 3.6,3.6s-1.6,3.6 -3.6,3.6S40.2,46.9 40.2,44.9"
-      android:fillColor="#FFC005"/>
-  <path
-      android:pathData="M34.7,67.1c0,4.1 3.3,7.4 7.4,7.4H49h7.8l-8.3,-8.7l-5.7,-6c-1.4,-1.4 -3.7,-1.4 -5.1,0L34.7,63V67.1z"
-      android:fillColor="#2E3E5F"/>
+    android:viewportWidth="88"
+    android:viewportHeight="88">
+
+    <path
+        android:fillColor="#004137"
+        android:pathData="m21.963,73.013c-1.812,0 -3.376,-0.661 -4.693,-1.981 -1.316,-1.322 -1.973,-2.891 -1.973,-4.713L15.297,6.694c0,-1.82 0.658,-3.391 1.973,-4.713 1.316,-1.322 2.879,-1.981 4.693,-1.981l59.372,0c1.812,0 3.376,0.661 4.693,1.981 1.316,1.322 1.973,2.891 1.973,4.713l0,59.625c0,1.82 -0.658,3.391 -1.973,4.713 -1.316,1.322 -2.881,1.981 -4.693,1.981z" />
+
+    <path
+        android:fillColor="#004137"
+        android:pathData="m72.699,81.871l-59.955,0c-3.57,0 -6.462,-2.905 -6.462,-6.49L6.283,14.99l-6.283,0l0,62.115c0,6.018 4.857,10.895 10.849,10.895l61.85,0z" />
+
+    <path
+        android:fillColor="#d8ff4f"
+        android:pathData="M61.391,35.423l-11.902,15.352l-7.767,-9.604l-9.324,12.398l42.421,0z" />
+
 </vector>
