--- a/app/src/main/res/drawable/ic_launcher_foreground_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground_monochrome.xml
@@ -1,22 +1,35 @@
+<!--
+  ~ Copyright (c) 2025. Fairphone B.V.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+
     <path
-        android:fillAlpha="0.2"
-        android:pathData="M42.2,35.9h23.5c4.1,0 7.5,3.3 7.5,7.5V67c0,4.1 -3.4,7.5 -7.5,7.5H42.2c-4.1,0 -7.5,-3.3 -7.5,-7.5V43.4C34.7,39.3 38.1,35.9 42.2,35.9z"
-        android:fillColor="#68A4F2"/>
+        android:fillColor="#004137"
+        android:pathData="M382.9,681c-10.6,0 -19.8,-3.8 -27.5,-11.5 -7.7,-7.7 -11.5,-16.8 -11.5,-27.5v-347.3c0,-10.6 3.8,-19.8 11.5,-27.5 7.7,-7.7 16.8,-11.5 27.5,-11.5h347.3c10.6,0 19.8,3.8 27.5,11.5 7.7,7.7 11.5,16.8 11.5,27.5v347.3c0,10.6 -3.8,19.8 -11.5,27.5 -7.7,7.7 -16.9,11.5 -27.5,11.5h-347.3Z" />
+
     <path
-        android:fillAlpha="0.7"
-        android:pathData="M66,74.5l-16.6,0c-3.6,0 -5.4,-4.4 -2.8,-6.9c4.6,-4.4 8.3,-8 13.3,-12.8c1.6,-1.5 4.1,-1.5 5.6,0c2.9,2.8 5.4,5.2 7.8,7.5l0,4.9C73.3,71.2 70,74.5 66,74.5z"
-        android:fillColor="#172339"/>
+        android:fillColor="#004137"
+        android:pathData="M679.7,732.6h-350.7c-20.9,0 -37.8,-16.9 -37.8,-37.8v-351.8h-36.8v361.8c0,35 28.4,63.5 63.5,63.5h361.8v-35.7Z" />
+
     <path
-        android:fillAlpha="0.8"
-        android:pathData="M40.2,44.9c0,-2 1.6,-3.6 3.6,-3.6s3.6,1.6 3.6,3.6s-1.6,3.6 -3.6,3.6S40.2,46.9 40.2,44.9"
-        android:fillColor="#FFC005"/>
-    <path
-        android:fillAlpha="1"
-        android:pathData="M34.7,67.1c0,4.1 3.3,7.4 7.4,7.4H49h7.8l-8.3,-8.7l-5.7,-6c-1.4,-1.4 -3.7,-1.4 -5.1,0L34.7,63V67.1z"
-        android:fillColor="#2E3E5F"/>
+        android:fillColor="#d8ff4f"
+        android:pathData="M443.9,567.7l248.1,0l-78.5,-105.7l-69.6,89.4l-45.4,-55.9l-54.5,72.2z" />
+
 </vector>
