--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -17,19 +17,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
+    android:viewportWidth="88"
+    android:viewportHeight="88">
 
     <path
         android:fillColor="#004137"
-        android:pathData="M382.9,681c-10.6,0 -19.8,-3.8 -27.5,-11.5 -7.7,-7.7 -11.5,-16.8 -11.5,-27.5v-347.3c0,-10.6 3.8,-19.8 11.5,-27.5 7.7,-7.7 16.8,-11.5 27.5,-11.5h347.3c10.6,0 19.8,3.8 27.5,11.5 7.7,7.7 11.5,16.8 11.5,27.5v347.3c0,10.6 -3.8,19.8 -11.5,27.5 -7.7,7.7 -16.9,11.5 -27.5,11.5h-347.3Z" />
+        android:pathData="m21.963,73.013c-1.812,0 -3.376,-0.661 -4.693,-1.981 -1.316,-1.322 -1.973,-2.891 -1.973,-4.713L15.297,6.694c0,-1.82 0.658,-3.391 1.973,-4.713 1.316,-1.322 2.879,-1.981 4.693,-1.981l59.372,0c1.812,0 3.376,0.661 4.693,1.981 1.316,1.322 1.973,2.891 1.973,4.713l0,59.625c0,1.82 -0.658,3.391 -1.973,4.713 -1.316,1.322 -2.881,1.981 -4.693,1.981zM61.391,35.423l-11.902,15.352l-7.767,-9.604l-9.324,12.398l42.421,0z" />
 
     <path
         android:fillColor="#004137"
-        android:pathData="M679.7,732.6h-350.7c-20.9,0 -37.8,-16.9 -37.8,-37.8v-351.8h-36.8v361.8c0,35 28.4,63.5 63.5,63.5h361.8v-35.7Z" />
-
-    <path
-        android:fillColor="#d8ff4f"
-        android:pathData="M443.9,567.7l248.1,0l-78.5,-105.7l-69.6,89.4l-45.4,-55.9l-54.5,72.2z" />
+        android:pathData="m72.699,81.871l-59.955,0c-3.57,0 -6.462,-2.905 -6.462,-6.49L6.283,14.99l-6.283,0l0,62.115c0,6.018 4.857,10.895 10.849,10.895l61.85,0z" />
 
 </vector>
